@@ -262,8 +262,13 @@ public class Analyser implements NodeVisitor {
 		// System.out.println("TODO BinarySelectorMessageElement() " + value + " " + unaryObjectDescription);
 	}
 
-	public void visit(KeywordMessageElement keywordMessageElement, String keyword, int line, List<BinaryObjectDescription> binaryObjectDescriptions) {
+	public void visit(KeywordMessageElement keywordMessageElement, String keyword, int line, int argumentCount) {
 		// System.out.println("TODO KeywordMessageElement() " + keyword + " " + binaryObjectDescriptions);
+	}
+
+	public void visitEnd(KeywordMessageElement keywordMessageElement, String keyword, int line, int argumentCount) {
+		classBytecodeWriter.keywordSend(keyword, argumentCount, line, sendToSuper);
+		sendToSuper = false;
 	}
 
 	public void visit(UnaryObjectDescription unaryObjectDescription) {
