@@ -35,7 +35,8 @@ public interface NodeVisitor {
 	void visitEnd(Cascade cascade);
 	void visit(UnarySelectorMessageElement unarySelectorMessageElement, String value, int line);
 	void visit(BinarySelectorMessageElement binarySelectorMessageElement, String value, int line, UnaryObjectDescription unaryObjectDescription);
-	void visit(KeywordMessageElement keywordMessageElement, String keyword, int line, List<BinaryObjectDescription> binaryObjectDescriptions);
+	void visit(KeywordMessageElement keywordMessageElement, String keyword, int line, int argumentCount);
+	void visitEnd(KeywordMessageElement keywordMessageElement, String keyword, int line, int argumentCount);
 	void visit(UnaryObjectDescription unaryObjectDescription);
 	void visit(BinaryObjectDescription binaryObjectDescription);
 	void visit(UnaryExpression unaryExpression);
