@@ -1,3 +1,7 @@
+21/11/2011 Changes
+
+Added cascaded KeywordMessageElement processing.
+
 20/11/2011 Changes
 
 Added bootstrap methods to accept each of the class creation cascade messages. 
